se agrega espacio entre iconos

--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
               <div class="d-flex flex-column">
 
                   <button class="btn btn-primary btn-rounded mb-3">
-                    <a href="https://comexa.com.mx" class="text-light text-decoration-none"><i class="fa-solid fa-globe fa-lg me-2"></i>CORPORACIÓN COMEXA</a>
+                    <a href="https://comexa.com.mx" class="text-light text-decoration-none"><i class="fa-solid fa-globe fa-lg me-2"></i><p class="m-0 p-0">CORPORACIÓN COMEXA</p></a>
                   </button>
 
                   <button class="btn btn-primary btn-rounded mb-3">
-                    <a href="mailto: fernando.padilla@comexa.com.mx" class="text-light text-decoration-none"><i class="fa-solid fa-envelope fa-lg me-2"></i>fernando.padilla@comexa.com.mx</a>
+                    <a href="mailto: fernando.padilla@comexa.com.mx" class="text-light text-decoration-none"><i class="fa-solid fa-envelope fa-lg me-2"></i><p class="m-0 p-0">fernando.padilla@comexa.com.mx</p></a>
                   </button>
 
                   <button class="btn btn-primary btn-rounded mb-3">
-                    <a href="tel: +525544637814" class="text-light text-decoration-none"><i class="fa-solid fa-phone fa-lg me-2"></i>55-4463-7814</a>
+                    <a href="tel: +525544637814" class="text-light text-decoration-none"><i class="fa-solid fa-phone fa-lg me-2"></i><p class="m-0 p-0">55-4463-7814</p></a>
                   </button>
 
               </div>
